# Cross-complie-musl-cmake

./: README.md
hello_world/: CMakeLists.txt  build.sh
hello_world/src/: hello_world.cpp
musl_cc/: env
musl_cc/toolchain/: fetch.sh
musl_cc/triplets/: aarch64-linux-musl.cmake  aarch64_be-linux-musl.cmake  armeb-linux-musleabihf.cmake  armel-linux-musleabi.cmake  armv5l-linux-musleabihf.cmake  armv7l-linux-musleabihf.cmake  armv7m-linux-musleabi.cmake  armv7r-linux-musleabihf.cmake  common.cmake  i486-linux-musl.cmake  i686-linux-musl.cmake  i686-w64-mingw32.cmake  m68k-linux-musl.cmake  microblaze-linux-musl.cmake  microblazeel-linux-musl.cmake  mips-linux-musl.cmake  mips64-linux-musl.cmake  mips64el-linux-musln32.cmake  mipsel-linux-muslsf.cmake  or1k-linux-musl.cmake  powerpc-linux-musl.cmake  powerpc64-linux-musl.cmake  powerpc64le-linux-musl.cmake  powerpcle-linux-muslsf.cmake  riscv64-linux-musl.cmake  s390x-linux-musl.cmake  sh2-linux-musl.cmake  sh2eb-linux-muslfdpic.cmake  sh4-linux-musl.cmake  sh4eb-linux-musl.cmake  x86_64-w64-mingw32.cmake
musl_cc/triplets/tool/: gen_triplets.py
musl_cc/xstatic/: fetch.sh
